fix: Add styling for item count display in UploadFiles component and update layout for better visibility

--- a/frontend/src/assets/css/admin/addingProducts/UploadFiles.module.css
+++ b/frontend/src/assets/css/admin/addingProducts/UploadFiles.module.css
@@ -142,5 +142,14 @@
     color: #082A3A;
     cursor: not-allowed;
 }
-
+.items {
+   /* תעשה האתמות לטקסט לגודל ופונט */
+    font-size: 20px;
+    font-family: "IBM Plex Sans Hebrew";
+    font-weight: bold;
+    line-height: 20px;
+    letter-spacing: 0px;
+    color: #082A3A;
+    margin: 20px;
+}
 
